# fpx-automation-platform

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_package.sh  pyproject.toml  requirements.txt  ruff.toml  setup_env.sh
.github/workflows/: lint.yml
PySystem/: dump.html
PySystem/SystemObject/: cli_node.py  connectors.py  gui_node.py  sys_obj.py
PySystem/SystemTestCase/: SysTestCase.py  helpers.py  script_testcase.py  sys_suite.py  tc_parser.py
PySystem/config/: config_sample.yaml  elements.py  environment.py
PySystem/executor/: scenario_executor.py  sysrunner.py
PySystem/monitor/: logger.py
PySystem/report/: default.css  report2.html  template.html  update.js
PySystem/src/: TestResults_src.ftnt_lundary_tc.DemoTc_2019-05-11_17-35-02.html  TestResults_src.ftnt_lundary_tc.DemoTc_2019-05-11_17-44-03.html  dry_run.py  ftnt_lundary_tc.py
PySystem/sysrunner/: run.py  runsingle.py
PySystem/trail/: test.py
fpx_auto/: debug.csv  debug_tp.sh  polmatch_7.4.sh  rename_tc.py  run_avscan.sh  run_debug.sh  run_polmatch.sh  run_test.sh  ssh_test.sh  test.csv  test.sh  test_tp_7.4.sh  tp_debug - format-issue.csv  tp_debug_7.4.csv  tp_explicit.csv  tp_explicit.sh  tp_pol_7.4.csv
fpx_auto/2.0.0/: run_av_scan.sh  run_polmatch.sh
fpx_auto/7.2/: run_catematch.sh  run_debug.sh  run_polmatch.sh
fpx_auto/environment_backup/: leo_lab.json
fpx_auto/ftnt_nodes/: ftnt_cli.py  ftnt_gui.py
fpx_auto/lab_env/: elements.py  environment.py
tests/: test_cli_node.py  test_report_dir.py
vs_pysys_workspace/: pysys.env  workspace.code-workspace
(+991 files in other folders)
