[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fpx-pysystem"
version = "0.1.0"
description = "FPX automation platform"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "FPX"}]
license = {text = "MIT"}

[project.urls]
Home = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "pysys_backup", "vs_pysys_workspace"]

[project.dependencies]
numpy = ">=1.20,<3"
pandas = ">=1.2,<3"
lxml = ">=4.9,<5"
pexpect = ">=4.8,<5"
selenium = ">=4,<5"
keyboard = ">=0.13,<1"
PyYAML = ">=6,<7"
html-testRunner = ">=1,<2"
jinja2 = ">=3,<4"
paramiko = ">=3,<4"
